--- a/public/assets/css/front.style.css
+++ b/public/assets/css/front.style.css
@@ -5991,7 +5991,7 @@ ul.grid li .collection-content a:hover {
 .flat-social #social-links>ul>li>a>span
 {
     font-size: 1.25rem !important;
-    color: #ed1c24;
+    color: #127139;
 
 }
 .pagination li {
