--- a/public/assets/css/skin-theme.css
+++ b/public/assets/css/skin-theme.css
@@ -17,7 +17,7 @@
     --font-style-section-header: ;
     --font-color-paragraph: #999999;
     --font-line-height-paragraph: 25px;
-    --font-color-primary: #ed1c24;
+    --font-color-primary: #127139;
     /* --font-color-primary: #004990; */
     --font-color-secondary: #333333
 }
